feat: Additional Resources

--- a/src/_includes/head/custom.html
+++ b/src/_includes/head/custom.html
@@ -1,4 +1,4 @@
-<link rel="preconnect" href="https://kit.fontawesome.com">
+<link rel="preconnect" href="https://kit.fontawesome.com" crossorigin>
 <script defer src="https://kit.fontawesome.com/523e3eb8bb.js" crossorigin="anonymous"></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +10,16 @@
 
 <!-- <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet"> -->
 
-<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400;1,600;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400;1,600;1,700&display=swap&subset=latin" rel="stylesheet">
+
+
+<!-- <link
+rel="preload"
+as="font"
+type="font/woff2"
+href="https://unpkg.com/mathlive@0.77.0/dist/fonts/KaTeX_Main-Regular.woff2"
+crossorigin
+/> -->
 
 
 <!-- <script>
