--- a/src/_sass/imports/minimal-mistakes.scss
+++ b/src/_sass/imports/minimal-mistakes.scss
@@ -29,7 +29,7 @@
 @import "minimal-mistakes/masthead";
 @import "minimal-mistakes/navigation";
 @import "minimal-mistakes/footer";
-@import "minimal-mistakes/search";
+// @import "minimal-mistakes/search";
 @import "minimal-mistakes/syntax";
 
 /* Utility classes */
@@ -37,6 +37,6 @@
 
 /* Layout specific */
 @import "minimal-mistakes/page";
-@import "minimal-mistakes/archive";
+// @import "minimal-mistakes/archive";
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
