--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -36,7 +36,7 @@
             /* calculate height of nav list
               viewport height - nav height - masthead x-padding
             */
-            height: calc(100vh - #{$nav-height} - 2em);
+            height: calc(100vh - #{$nav-height});
         }
     }
 
@@ -117,7 +117,7 @@
         &.sticky {
             @include clearfix();
             position: sticky;
-            top: 2em;
+            top: 0;
             float: right;
         }
     }
