--- a/src/_sass/imports/minimal-mistakes/_utilities.scss
+++ b/src/_sass/imports/minimal-mistakes/_utilities.scss
@@ -107,22 +107,22 @@ body:hover .visually-hidden button {
    Task lists
    ========================================================================== */
 
-.task-list {
-  padding:0;
+// .task-list {
+//   padding:0;
 
-  li {
-    list-style-type: none;
-  }
+//   li {
+//     list-style-type: none;
+//   }
 
-  .task-list-item-checkbox {
-    margin-right: 0.5em;
-    opacity: 1;
-  }
-}
+//   .task-list-item-checkbox {
+//     margin-right: 0.5em;
+//     opacity: 1;
+//   }
+// }
 
-.task-list .task-list {
-  margin-left: 1em;
-}
+// .task-list .task-list {
+//   margin-left: 1em;
+// }
 
 /*
    Alignment
@@ -211,33 +211,33 @@ body:hover .visually-hidden button {
     color: var(--text-color);
   }
 
-  .fa-behance,
-  .fa-behance-square {
-    color: $behance-color;
-  }
+  // .fa-behance,
+  // .fa-behance-square {
+  //   color: $behance-color;
+  // }
 
-  .fa-bitbucket {
-    color: $bitbucket-color;
-  }
+  // .fa-bitbucket {
+  //   color: $bitbucket-color;
+  // }
 
-  .fa-dribbble,
-  .fa-dribble-square {
-    color: $dribbble-color;
-  }
+  // .fa-dribbble,
+  // .fa-dribble-square {
+  //   color: $dribbble-color;
+  // }
 
-  .fa-facebook,
-  .fa-facebook-square,
-  .fa-facebook-f {
-    color: $facebook-color;
-  }
+  // .fa-facebook,
+  // .fa-facebook-square,
+  // .fa-facebook-f {
+  //   color: $facebook-color;
+  // }
 
-  .fa-flickr {
-    color: $flickr-color;
-  }
+  // .fa-flickr {
+  //   color: $flickr-color;
+  // }
 
-  .fa-foursquare {
-    color: $foursquare-color;
-  }
+  // .fa-foursquare {
+  //   color: $foursquare-color;
+  // }
 
   .fa-github,
   .fa-github-alt,
@@ -245,34 +245,34 @@ body:hover .visually-hidden button {
     color: $github-color;
   }
 
-  .fa-gitlab {
-    color: $gitlab-color;
-  }
+  // .fa-gitlab {
+  //   color: $gitlab-color;
+  // }
 
   .fa-instagram {
     color: $instagram-color;
   }
 
-  .fa-lastfm,
-  .fa-lastfm-square {
-    color: $lastfm-color;
-  }
+  // .fa-lastfm,
+  // .fa-lastfm-square {
+  //   color: $lastfm-color;
+  // }
 
   .fa-linkedin,
   .fa-linkedin-in {
     color: $linkedin-color;
   }
 
-  .fa-mastodon,
-  .fa-mastodon-square {
-    color: $mastodon-color;
-  }
+  // .fa-mastodon,
+  // .fa-mastodon-square {
+  //   color: $mastodon-color;
+  // }
 
-  .fa-pinterest,
-  .fa-pinterest-p,
-  .fa-pinterest-square {
-    color: $pinterest-color;
-  }
+  // .fa-pinterest,
+  // .fa-pinterest-p,
+  // .fa-pinterest-square {
+  //   color: $pinterest-color;
+  // }
 
   .fa-reddit {
     color: $reddit-color;
@@ -283,43 +283,43 @@ body:hover .visually-hidden button {
     color: $rss-color;
   }
 
-  .fa-soundcloud {
-    color: $soundcloud-color;
-  }
+  // .fa-soundcloud {
+  //   color: $soundcloud-color;
+  // }
 
-  .fa-stack-exchange,
-  .fa-stack-overflow {
-    color: $stackoverflow-color;
-  }
+  // .fa-stack-exchange,
+  // .fa-stack-overflow {
+  //   color: $stackoverflow-color;
+  // }
 
-  .fa-tumblr,
-  .fa-tumblr-square {
-    color: $tumblr-color;
-  }
+  // .fa-tumblr,
+  // .fa-tumblr-square {
+  //   color: $tumblr-color;
+  // }
 
   .fa-twitter,
   .fa-twitter-square {
     color: $twitter-color;
   }
 
-  .fa-vimeo,
-  .fa-vimeo-square,
-  .fa-vimeo-v {
-    color: $vimeo-color;
-  }
+  // .fa-vimeo,
+  // .fa-vimeo-square,
+  // .fa-vimeo-v {
+  //   color: $vimeo-color;
+  // }
 
-  .fa-vine {
-    color: $vine-color;
-  }
+  // .fa-vine {
+  //   color: $vine-color;
+  // }
 
-  .fa-youtube {
-    color: $youtube-color;
-  }
+  // .fa-youtube {
+  //   color: $youtube-color;
+  // }
 
-  .fa-xing,
-  .fa-xing-square {
-    color: $xing-color;
-  }
+  // .fa-xing,
+  // .fa-xing-square {
+  //   color: $xing-color;
+  // }
 }
 
 /*
@@ -384,12 +384,10 @@ body:hover .visually-hidden button {
   @include breakpoint($large) {
     @include clearfix();
     position: sticky;
-    top: 2em;
+    top: 0;
 
-    > * {
-      display: block;
-    }
-    > script { display: none}
+    > * { display: block; }
+    > script { display: none;}
   }
 }
 
@@ -397,98 +395,98 @@ body:hover .visually-hidden button {
    Wells
    ========================================================================== */
 
-.well {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: $border-radius;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
+// .well {
+//   min-height: 20px;
+//   padding: 19px;
+//   margin-bottom: 20px;
+//   background-color: #f5f5f5;
+//   border: 1px solid #e3e3e3;
+//   border-radius: $border-radius;
+//   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+// }
 
 /*
    Modals
    ========================================================================== */
 
-.show-modal {
-  overflow: hidden;
-  position: relative;
+// .show-modal {
+//   overflow: hidden;
+//   position: relative;
 
-  &:before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-    background-color: rgba(255, 255, 255, 0.85);
-  }
+//   &:before {
+//     position: absolute;
+//     content: "";
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     z-index: 999;
+//     background-color: rgba(255, 255, 255, 0.85);
+//   }
 
-  .modal {
-    display: block;
-  }
-}
+//   .modal {
+//     display: block;
+//   }
+// }
 
-.modal {
-  display: none;
-  position: fixed;
-  width: 300px;
-  top: 50%;
-  left: 50%;
-  margin-left: -150px;
-  margin-top: -150px;
-  min-height: 0;
-  z-index: 9999;
-  background: #fff;
-  border: 1px solid $border-color;
-  border-radius: $border-radius;
-  box-shadow: $box-shadow;
+// .modal {
+//   display: none;
+//   position: fixed;
+//   width: 300px;
+//   top: 50%;
+//   left: 50%;
+//   margin-left: -150px;
+//   margin-top: -150px;
+//   min-height: 0;
+//   z-index: 9999;
+//   background: #fff;
+//   border: 1px solid $border-color;
+//   border-radius: $border-radius;
+//   box-shadow: $box-shadow;
 
-  &__title {
-    margin: 0;
-    padding: 0.5em 1em;
-  }
+//   &__title {
+//     margin: 0;
+//     padding: 0.5em 1em;
+//   }
 
-  &__supporting-text {
-    padding: 0 1em 0.5em 1em;
-  }
+//   &__supporting-text {
+//     padding: 0 1em 0.5em 1em;
+//   }
 
-  &__actions {
-    padding: 0.5em 1em;
-    border-top: 1px solid $border-color;
-  }
-}
+//   &__actions {
+//     padding: 0.5em 1em;
+//     border-top: 1px solid $border-color;
+//   }
+// }
 
 /*
    Footnotes
    ========================================================================== */
 
-.footnote {
-  color: mix(#fff, $gray, 25%);
-  text-decoration: none;
-}
+// .footnote {
+//   color: mix(#fff, $gray, 25%);
+//   text-decoration: none;
+// }
 
-.footnotes {
-  color: mix(#fff, $gray, 25%);
+// .footnotes {
+//   color: mix(#fff, $gray, 25%);
 
-  ol,
-  li,
-  p {
-    margin-bottom: 0;
-    font-size: $type-size-5;
-  }
-}
+//   ol,
+//   li,
+//   p {
+//     margin-bottom: 0;
+//     font-size: $type-size-5;
+//   }
+// }
 
-a.reversefootnote {
-  color: $gray;
-  text-decoration: none;
+// a.reversefootnote {
+//   color: $gray;
+//   text-decoration: none;
 
-  &:hover {
-    text-decoration: underline;
-  }
-}
+//   &:hover {
+//     text-decoration: underline;
+//   }
+// }
 
 /*
    Required
@@ -503,41 +501,41 @@ a.reversefootnote {
    Google Custom Search Engine
    ========================================================================== */
 
-.gsc-control-cse {
-  table,
-  tr,
-  td {
-    border: 0; /* remove table borders widget */
-  }
-}
+// .gsc-control-cse {
+//   table,
+//   tr,
+//   td {
+//     border: 0; /* remove table borders widget */
+//   }
+// }
 
 /*
    Responsive Video Embed
    ========================================================================== */
 
-.responsive-video-container {
-  position: relative;
-  margin-bottom: 1em;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
+// .responsive-video-container {
+//   position: relative;
+//   margin-bottom: 1em;
+//   padding-bottom: 56.25%;
+//   height: 0;
+//   overflow: hidden;
+//   max-width: 100%;
 
-  iframe,
-  object,
-  embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
+//   iframe,
+//   object,
+//   embed {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//   }
+// }
 
-// full screen video fixes
-:-webkit-full-screen-ancestor {
-  .masthead,
-  .page__footer {
-    position: static;
-  }
-}
+// // full screen video fixes
+// :-webkit-full-screen-ancestor {
+//   .masthead,
+//   .page__footer {
+//     position: static;
+//   }
+// }
