doc: style updates

--- a/src/_sass/imports/minimal-mistakes/_base.scss
+++ b/src/_sass/imports/minimal-mistakes/_base.scss
@@ -35,7 +35,9 @@ h6 {
 
 h1 {
   margin-top: 0;
-  font-size: $type-size-1;
+  font-size: 5rem;
+  line-height: 1;
+  letter-spacing: -.03em;
 }
 
 h2 {
