--- a/src/_sass/imports/minimal-mistakes/_footer.scss
+++ b/src/_sass/imports/minimal-mistakes/_footer.scss
@@ -4,29 +4,27 @@
 
 .page__footer {
   @include clearfix;
-  float: left;
+
+  display: flex;
+  justify-content: space-between;
+
   margin-left: 0;
   margin-right: 0;
+  margin-top: 2em;
+  padding: 1em 1em 1em 1em;
+  
   width: 100%;
-  clear: both;
-  color: $muted-text-color;
-  animation: $intro-transition;
-  animation-delay: 0.45s;
+  max-width: 100%;
+
+  color: $dark-gray;
   background-color: $footer-background-color;
 
-  footer {
-    @include clearfix;
-    display: flex;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2em;
-    max-width: 100%;
-    padding: 0 1em 2em;
+  // animation: $intro-transition;
+  // animation-delay: 0.45s;
 
-    @include breakpoint($large) {
-      max-width: $max-width;
-    }
+  @include breakpoint($large) {
+    padding-left: calc((100% - #{$max-width}) / 2);
+    padding-right: calc((100% - #{$max-width}) / 2);
   }
 
   a {
@@ -36,13 +34,6 @@
     &:hover {
       text-decoration: underline;
     }
-  }
-
-  .fas,
-  .fab,
-  .far,
-  .fal {
-    color: $muted-text-color;
   }
 }
 
@@ -75,8 +66,11 @@
     padding-right: 1em;
   }
 
-  a {
+  a:not(:last-child) {
     padding-right: 1.5em;
+  }
+
+  a {
     font-weight: bold;
   }
 
