--- a/src/_sass/imports/tables.scss
+++ b/src/_sass/imports/tables.scss
@@ -46,6 +46,8 @@
   tr td:first-child {
     min-width: var(--first-col-width, 15ex);
   }
+
+
   // Used by the list of dictionaries table (in the intro page and elsewhere)
   tr td:first-child a {
     display: block;
@@ -65,6 +67,25 @@
 
   }
 }
+
+.first-column-header table thead tr th:first-child {
+  background: var(--callout-background);
+  padding-left: 0.5em;
+}
+
+.first-column-header table thead tr th:nth-child(2) {
+  padding-left: 0.5em;
+}
+
+.first-column-header table tr td:first-child {
+  background: var(--callout-background);
+  padding-left: 0.5em;
+}
+
+.first-column-header table tr td:nth-child(2) {
+  padding-left: 0.5em;
+}
+
 
 .equal-width-columns table {
   table-layout: fixed;
