doc: updated forum icon

--- a/src/_sass/imports/minimal-mistakes/_footer.scss
+++ b/src/_sass/imports/minimal-mistakes/_footer.scss
@@ -57,7 +57,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     font-family: var(--display-font-family);
-    font-size: $type-size-6;
+    font-size: 1rem;
     text-transform: uppercase;
   }
 
