--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -202,6 +202,7 @@
     .visible-links {
         display: flex;
         justify-content: flex-end;
+        align-items: center;
         flex: 1;
         overflow: hidden;
 
@@ -218,6 +219,7 @@
         }
         a {
             position: relative;
+            font-size: 1.5rem;
 
             &:before {
                 content: '';
