--- a/src/_sass/imports/code-theme.scss
+++ b/src/_sass/imports/code-theme.scss
@@ -215,6 +215,10 @@ code-playground {
   font-size: 14px;
 }
 
+math-field {
+  border-radius: 8px;
+}
+
 code-playground::part(editor):hover {
   transform: scale(1.007)
 }
