--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -64,6 +64,52 @@
   {% endfor %}
 {% endif %}
 
+
+{% if head.preloadMathliveFonts %}
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_AMS-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Caligraphic-Bold.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Caligraphic-Regular.woff2" />
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Fraktur-Bold.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Fraktur-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Main-BoldItalic.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Main-Bold.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Main-Italic.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Main-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Math-BoldItalic.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Math-Italic.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_SansSerif-Bold.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_SansSerif-Italic.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_SansSerif-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Script-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Size1-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Size2-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Size3-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Size4-Regular.woff2"/>
+<link rel="preload" as="font" crossorigin
+  href="https://unpkg.com/mathlive/dist/fonts/KaTeX_Typewriter-Regular.woff2"/>
+<link rel="stylesheet" href="https://unpkg.com/mathlive/dist/mathlive-fonts.css" />
+{% endif %}
+
+
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
     {% if script contains "://" %}
