--- a/src/_sass/wide.scss
+++ b/src/_sass/wide.scss
@@ -214,7 +214,7 @@ section.fullwidth p {
 
 section.fullwidth.light-card {
   margin: 2em;
-  padding: 0;
+  padding: 1em;
   width: calc(100% - 2em);
 }
 
