--- a/src/_layouts/single.html
+++ b/src/_layouts/single.html
@@ -51,7 +51,9 @@ layout: default
 {% endif %}
 
 {{ content }}
-        {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+
+
+{% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
       <footer class="page__meta">
@@ -79,7 +81,26 @@ layout: default
     </div>
 
   </article>
+
+  
+  
+
+{% if toc %}
+<aside class="sidebar__right">
+  <nav class="toc">
+    <header><h2 class="nav__title"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 384 512" style="height:16px; width:12px"><path fill="currentColor" d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z"/></svg>{{ toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On This Page" }}</h2></header>
+  
+    {% if toc-options %}
+      {{ content | toc: toc-options }}
+    {% else %}
+      {{ content | toc: '{"tags":["h2","h3"]}' }}
+    {% endif %}
+                            
+  </nav>
+</aside>
+{% endif %}
 </div>
+
 
 {% if render_math_in_document %}
 <script type="module">
@@ -96,7 +117,8 @@ whenReady(() => import('//unpkg.com/mathlive?module').then((mathlive) =>
           inline: [['\\(', '\\)']],
           display: [ ['$$', '$$'], ['\\[', '\\]']],
         },
-        processEnvironments : false 
+        processEnvironments : false,
+        processClassPattern: /./
       },
       asciiMath: null,
     })
