--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -86,7 +86,7 @@ a.chevron::after {
 
 .read-more {
   margin: 2em 0 !important;
-  width: 100%; 
+  overflow: hidden;
 
   /* override*/
   color: #494e52;   /* This color is not currently used, as the read-more content is a <a> tag. See ".read-more a" below */
